--- a/ros2/nightly/nightly/prereqs.yaml
+++ b/ros2/nightly/nightly/prereqs.yaml
@@ -2,3 +2,5 @@ console_bridge: {ubuntu: []}
 fastcdr: {ubuntu: []}
 fastrtps: {ubuntu: []}
 urdfdom_headers: {ubuntu: []}
+# FIXME remove once https://github.com/eProsima/foonathan_memory_vendor/pull/9 is addressed
+FOONATHAN_MEMORY: {ubuntu: []}
